# Lecture-Day-08-09-10

day10/: pyproject.toml
day10/lab/: .env.example  .gitignore  PLAN.md  etl_pipeline.py  eval_retrieval.py
day10/lab/artifacts/eval/: before_after_eval.csv
day10/lab/artifacts/manifests/: manifest_sprint1.json
