[project]
name = "day10"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=0.4.22",
    "pillow>=12.2.0",
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "sentence-transformers>=2.6.0",
]
